rust/transpiler/tests/errors/duplicate_attribute.hyper
<div class="foo" class="bar">Hello</div>
